Cropper Modal as Fixed Position

--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -2460,7 +2460,7 @@ button[type="submit"]:hover {
 
 #cropperModal {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 100px;
   left: 625px;
   transform: translate(-50%, -50%);
